--- a/src/gpnmgr/templates/top_nav.html
+++ b/src/gpnmgr/templates/top_nav.html
@@ -12,10 +12,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                {% if request.user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'teams_list' %}"><span class="fa-fw fa-solid fa-people-group"></span>
                         {% trans 'List teams' %}</a>
                 </li>
+                {% endif %}
                 {% if perms.fedi.manage_accounts %}
                     <li class="nav-item">
                         <a class="nav-link" href="#"><span class="fa-fw fa-brands fa-mastodon"></span>
