--- a/src/gpnmgr/teams/templates/teams/team_detail.html
+++ b/src/gpnmgr/teams/templates/teams/team_detail.html
@@ -98,7 +98,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h1 class="modal-title fs-5"
-                                id="confirmPromotionModal{{ member.pk }}Label">{% trans 'Do you really want to promote' %} {{ member }}?</h1>
+                                id="confirmPromotionModal{{ member.pk }}Label">{% blocktrans %}Do you really want to promote {{ member }}?{% endblocktrans %}</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="{% trans 'Close' %}"></button>
                         </div>
@@ -119,7 +119,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h1 class="modal-title fs-5"
-                                id="confirmPromotionModal{{ member.pk }}Label">{% trans 'Do you really want to promote' %} {{ member }}?</h1>
+                                id="confirmDemotionModal{{ member.pk }}Label">{% blocktrans %}Do you really want to demote {{ member }}?{% endblocktrans %}</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="{% trans 'Close' %}"></button>
                         </div>
@@ -145,7 +145,7 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h1 class="modal-title fs-5"
-                                id="confirmDeleteModal{{ member.pk }}Label">{% trans 'Do you really want to remove' %} {{ member }}?</h1>
+                                id="confirmDeleteModal{{ member.pk }}Label">{% blocktrans %}Do you really want to remove {{ member }}?{% endblocktrans %}</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                     aria-label="{% trans 'Close' %}"></button>
                         </div>
